# challenge-crawler

./: Dockerfile  README.md  machines.csv  machines.json  main.py  pyproject.toml  utils.py
converters/: generic_machine_converter.py
extractors/: extractor.py  hostgator_extractor.py  vultr_extractor.py
models/: generic_machine.py  hostgator_machine.py  vultr_machine.py
test/converters/: test_generic_machine_converter.py
test/extractors/: hostgator_page.html  test_hostgator_extractor.py  test_vultr_extractor.py  vultr_page.html
test/utils/: test_text_utils.py
utils/: output_utils.py  tag_text_utils.py  tag_utils.py  text_utils.py
