[tool.poetry]
name = "challenge-crawler"
version = "0.1.0"
description = ""
authors = ["Caio <caiorochapstrlrd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
bs4 = "^0.0.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
